--- a/styles/style.css
+++ b/styles/style.css
@@ -54,26 +54,41 @@ p {
   font-size: 24px;
 }
 
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
 
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
 
-.about-section img {
+.photo {
   width: 80%;
   border-radius: 10px;
 }
 
-.about-section-content {
+.recipes-photo {
+  margin-bottom: 25px;
+  border-radius: 6px;
+}
+
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 14px;
+}
+
+.content {
   margin: 30px;
 }
 
@@ -113,7 +128,7 @@ p {
     padding: 80px 20px;
   }
 
-  .about-section {
+  .content {
     text-align: center;
     padding: 0;
   }
